crates/bsql/tests/compile_fail/too_many_optional_clauses.stderr
error: query has 11 optional clauses (2048 variants) — maximum is 10 (1024 variants). Split the query into smaller queries with fewer optional filters.
  --> tests/compile_fail/too_many_optional_clauses.rs:13:13
   |
13 |       let _ = bsql::query!(
   |  _____________^
14 | |         "SELECT id FROM users WHERE 1=1
15 | |          [AND id = $c0: Option<i32>]
16 | |          [AND id = $c1: Option<i32>]
...  |
25 | |          [AND id = $c10: Option<i32>]"
26 | |     );
   | |_____^
   |
   = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
